--- a/index5.css
+++ b/index5.css
@@ -57,6 +57,7 @@ form{
     position: relative;
     top: -300px;
     left: 802px;
+   background-color: cyan;
 }
 .menu1{
     width: 350px;
@@ -100,6 +101,7 @@ form{
    margin-left: 150px;
    margin-right: 10px;
     /* background-color: black; */
-    color: white;
+    color: black;
     padding: 30px 30px 10px 15px;
+   background-color: cyan;
 }
