--- a/index6.css
+++ b/index6.css
@@ -64,34 +64,36 @@ padding: 20px;
 box-shadow: 5px 10px #888888;
 margin-right: 5px;}
 
-
-   
 .flex-items3{
     color: white;
     border-radius: 30px;
     border: 10px solid red;
    padding: 30px;
-   margin: 111px 61px 234px 180px;
+   
 
-    position: relative;
-    top: 239px;
-    right: 750px;
+    position: absolute;
+    top: 634px;
+    right: 1106px;
+    left: 50px;
     font-size: larger;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     box-shadow: 5px 10px #888888;
 }
+   
+
 .flex-items4{
     /* display: flex; */
     color: white;
     border-radius: 30px;
     border: 10px solid red;
 text-align: center;
-    position: relative;
-    top: 338px;
-    
+    /* position: absolute;
+    top: 639px;
     right: 100px;
-    bottom: 1px;
-    padding: 30px;
+    bottom: 1px; */
+    clear: right;
+    margin: 273px 0px 40px -272px;
+    padding: 30px 30px 50px;
     font-size: larger;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-shadow: 5px 10px #888888;
@@ -151,30 +153,4 @@ text-align: center;
     margin-right: 5px;
 }
 
-/* .itms1{
-    background-color: red;
-    flex-grow: 2;
-    position: relative;
-    width: 300px;
-    height: 300px;
-    margin: 30px;
-    text-align: center; */
-    /* justify-self: auto; */
-    /* line-height: 75px;} */
 
-/* .itms2{
-    background-color: blue;
-    flex-grow: 2;
-    position: relative;
-    top: -500px;
-    bottom: 111px;
-    left: 600px;
-    right: 1px;
-    width: 300px;
-    width: 300px;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
-}
- */
