--- a/index6.css
+++ b/index6.css
@@ -1,5 +1,5 @@
 body{background-color: rgb(236, 201, 236);
-border: 5px solid purple;
+border: 5px solid yellow;
 }
 .head1{
     /* display: inline-block; */
