--- a/index6.css
+++ b/index6.css
@@ -103,6 +103,36 @@ text-align: center;
     background-color: red;
     border-radius: 30px;
 }
+.fixed {
+    width: 500px;
+    height: 80px;
+    position: fixed;
+    background-color: red;
+    border: 8px solid red;
+    border-radius: 35px;
+    box-shadow: 8px 8px 2px black;
+    bottom: 70px;
+    left: 400px;}
+.left1 {
+    font-style: italic;
+    font-size: 26px;
+    color: white;
+    font-weight: bolder;
+    text-align: center;
+    position: absolute;
+    top: 10px;
+    left: 20px;
+}
+.right1 {
+    font-style: italic;
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    left: 330px;
+}
 .fcontain{
     display: inline-block;
     margin-left: 300px;
@@ -114,8 +144,6 @@ text-align: center;
     height: 700px;
     width: 900px;
     font-style: italic;
-    
-
 }
 .head2{
     font-size:large ;
